versions/v1.5/modules/en/pages/installation-setup/media/install-binaries-mode.adoc
= Install Binaries Only
:description: Install binaries only to configure cluster settings, network details, and node passwords for cloud and edge use cases
:revdate: 2026-01-08
:page-revdate: {revdate}

[WARNING]
====
A critical vulnerability in the {harvester-product-name} interactive installer allows attackers to gain remote shell (SSH) access to the host. If your environment is exposed to untrusted locations, you must either upgrade to v1.7 and use the corresponding interactive installer, or use the xref:installation-setup/methods/pxe-boot-install.adoc[PXE boot installation mechanism] when creating or expanding clusters. For more information, see the https://github.com/harvester/harvester/security/advisories/GHSA-6g8q-hp2j-gvwv[security advisory for CVE-2025-62877].
====

You can install and configure binaries only, which is ideal for cloud and edge use cases.

image::install/choose-installation-mode.png[choose-installation-mode.png]

== Background

Currently when a new node is launched it needs to be the first node in the cluster or join an existing cluster.
These two modes are useful when you already know enough about the environment to install the node.
However, for use cases such as bare-metal cloud providers and the edge, these installation modes load the OS and content to the node without letting you configure the network. Moreover, the K8s and networking configuration will not be applied.

If you choose `Install Harvester binaries only`, you will need to perform additional configuration after the first bootup:

* Create/Join option
* Management network interface details
* Cluster token
* Node password

Then, the installer will apply the endpoint configuration and boot {harvester-product-name}. No further reboots will be required.

== Stream disk mode

SUSE has published a raw image artifact for pre-installed {harvester-product-name}. The installer now allows streaming a pre-installed image directly to disk to support better integration with cloud providers.

On `Equinix Metal`, you can use the following kernel arguments to use the streaming mode:

----
ip=dhcp net.ifnames=1 rd.cos.disable rd.noverifyssl root=live:http://${artifactEndpoint}/harvester-v1.2.0-rootfs-amd64.squashfs harvester.install.automatic=true harvester.scheme_version=1 harvester.install.device=/dev/vda  harvester.os.password=password harvester.install.raw_disk_image_path=http://${artifactEndpoint}/harvester-v1.2.0-amd64.raw harvester.install.mode=install console=tty1 harvester.install.tty=tty1 harvester.install.config_url=https://metadata.platformequinix.com/userdata harvester.install.management_interface.interfaces="name:enp1s0" harvester.install.management_interface.method=dhcp harvester.install.management_interface.bond_options.mode=balance-tlb harvester.install.management_interface.bond_options.miimon=100
----

[NOTE]
====
When streaming to disk, it is recommended to host the raw disk artifact closer to the targets, as the raw disk artifact is nearly 16G in size.
====

